--- a/End/package.json
+++ b/End/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node ./dist/app.js"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -15,11 +15,13 @@
     "gulp": "^3.9.1",
     "http-proxy": "~1.13.2",
     "markdown": "0.5.0",
+    "mongoose": "^4.5.5",
     "mongoskin": "^2.1.0",
     "morgan": "~1.6.1",
     "multer": "0.1.6",
     "multiparty": "^4.1.2",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "xss": "^0.2.13"
   },
   "devDependencies": {
     "babel-core": "^6.11.4",
